Fix horizontal overflow at 980px viewport by reducing layout spacing

--- a/index.css
+++ b/index.css
@@ -37,7 +37,7 @@ body {
   aside {
     columns: 2;
     text-align: unset;
-    gap: 0.5em;
+    gap: 0.15em;
     max-width: inherit;
 
     /* min-height: 40em; */
@@ -47,8 +47,8 @@ body {
       break-before: auto;
       column-break-before: auto;
       -webkit-column-break-before: auto;
-      padding: 0.5em 0.75em;
-      margin-bottom: 0.5em;
+      padding: 0.3em 0.3em;
+      margin-bottom: 0.3em;
 
       &.break-before {
         display: block;
@@ -432,7 +432,7 @@ body.saving {
 @media (width >= 900px) {
   body {
     display: grid;
-    grid-template-columns: calc(var(--svg-size) + 4em) 1fr;
+    grid-template-columns: calc(var(--svg-size) + 1.1em) 1fr;
     grid-template-rows: auto auto 1fr;
 
 
@@ -452,6 +452,7 @@ body.saving {
     aside {
       grid-row: 2;
       grid-column: 2;
+      padding: 0 0.3em;
     }
 
     footer {
